# EEG-Brainwave-Analysis

./: Deployment.code-workspace  README.md  app.py  pyproject.toml  requirements.txt  users.json
Deployment/: app.py  users.json
data/: final_data_processing.py
data/interim/: filtered_sub11t11H.mat  filtered_sub11t11Hfir.mat  fircode.m  icaapplied.set  icaapplied1.mat  normalize.m  sgolaysub11t1H.mat  sgolaysub11t1Hfir.mat  sub10t1F.mat  sub10t1H.mat  sub10t1S.mat  sub10t2F.mat  sub10t2H.mat  sub10t2S.mat  sub11t1F.mat  sub11t1H.mat  sub11t1S.mat  sub11t2F.mat  sub11t2H.mat  sub11t2S.mat  sub1t1F.mat  sub1t1H.mat  sub1t1S.mat  sub1t2F.mat  sub1t2H.mat  sub1t2S.mat  sub2t1F.mat  sub2t1H.mat  sub2t1S.mat  sub2t2F.mat  sub2t2H.mat  sub2t2S.mat  sub3t1F.mat  sub3t1H.mat  sub3t1S.mat  sub3t2F.mat  sub3t2H.mat  sub3t2S.mat  sub5t1F.mat  sub5t1H.mat  (+29 more)
data/interim/feature-files/: Fea7.5s.csv  Fear1.csv  Fear2.csv  Fear3.csv  (+44 more)
data/raw/: sub10t1F.mat  sub10t1H.mat  sub10t1S.mat  sub10t2F.mat  sub10t2H.mat  sub10t2S.mat  sub11t1F.mat  sub11t1H.mat  sub11t1S.mat  sub11t2F.mat  sub11t2H.mat  sub11t2S.mat  sub1t1F.mat  sub1t1H.mat  sub1t1S.mat  sub1t2F.mat  sub1t2H.mat  sub1t2S.mat  sub2t1F.mat  sub2t1H.mat  sub2t1S.mat  sub2t2F.mat  sub2t2H.mat  sub2t2S.mat  sub3t1F.mat  sub3t1H.mat  sub3t1S.mat  sub3t2F.mat  sub3t2H.mat  sub3t2S.mat  sub5t1F.mat  sub5t1H.mat  sub5t1S.mat  sub5t2F.mat  sub5t2H.mat  sub5t2S.mat  sub6t1F.mat  sub6t1H.mat  sub6t1S.mat  sub6t2F.mat  (+30 more)
docs/: README.md  mkdocs.yml
docs/docs/: index.md
notebooks/: eeg_final.ipynb
references/: data_source.txt
(+137 files in other folders)
